--- a/transmitter/firmware/firmware.ioc
+++ b/transmitter/firmware/firmware.ioc
@@ -46,8 +46,8 @@ Mcu.Pin9=PA13
 Mcu.PinsNb=18
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=4.20.1
-MxDb.Version=DB.4.0.200
+MxCube.Version=4.21.0
+MxDb.Version=DB.4.0.210
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -96,7 +96,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=/opt/STM32CubeMX/Repository/STM32Cube_FW_F1_V1.4.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
