--- a/transmitter/firmware/firmware.ioc
+++ b/transmitter/firmware/firmware.ioc
@@ -1,10 +1,69 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-30\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-31\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-32\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-33\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-34\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-35\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-36\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-37\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-38\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-39\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-40\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-41\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-42\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-43\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-44\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.ContinuousConvMode=ENABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,Rank-30\#ChannelRegularConversion,Channel-30\#ChannelRegularConversion,SamplingTime-30\#ChannelRegularConversion,Rank-31\#ChannelRegularConversion,Channel-31\#ChannelRegularConversion,SamplingTime-31\#ChannelRegularConversion,Rank-32\#ChannelRegularConversion,Channel-32\#ChannelRegularConversion,SamplingTime-32\#ChannelRegularConversion,Rank-33\#ChannelRegularConversion,Channel-33\#ChannelRegularConversion,SamplingTime-33\#ChannelRegularConversion,Rank-34\#ChannelRegularConversion,Channel-34\#ChannelRegularConversion,SamplingTime-34\#ChannelRegularConversion,Rank-35\#ChannelRegularConversion,Channel-35\#ChannelRegularConversion,SamplingTime-35\#ChannelRegularConversion,Rank-36\#ChannelRegularConversion,Channel-36\#ChannelRegularConversion,SamplingTime-36\#ChannelRegularConversion,Rank-37\#ChannelRegularConversion,Channel-37\#ChannelRegularConversion,SamplingTime-37\#ChannelRegularConversion,Rank-38\#ChannelRegularConversion,Channel-38\#ChannelRegularConversion,SamplingTime-38\#ChannelRegularConversion,Rank-39\#ChannelRegularConversion,Channel-39\#ChannelRegularConversion,SamplingTime-39\#ChannelRegularConversion,Rank-40\#ChannelRegularConversion,Channel-40\#ChannelRegularConversion,SamplingTime-40\#ChannelRegularConversion,Rank-41\#ChannelRegularConversion,Channel-41\#ChannelRegularConversion,SamplingTime-41\#ChannelRegularConversion,Rank-42\#ChannelRegularConversion,Channel-42\#ChannelRegularConversion,SamplingTime-42\#ChannelRegularConversion,Rank-43\#ChannelRegularConversion,Channel-43\#ChannelRegularConversion,SamplingTime-43\#ChannelRegularConversion,Rank-44\#ChannelRegularConversion,Channel-44\#ChannelRegularConversion,SamplingTime-44\#ChannelRegularConversion
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=16
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-30\#ChannelRegularConversion=2
+ADC1.Rank-31\#ChannelRegularConversion=3
+ADC1.Rank-32\#ChannelRegularConversion=4
+ADC1.Rank-33\#ChannelRegularConversion=5
+ADC1.Rank-34\#ChannelRegularConversion=6
+ADC1.Rank-35\#ChannelRegularConversion=7
+ADC1.Rank-36\#ChannelRegularConversion=8
+ADC1.Rank-37\#ChannelRegularConversion=9
+ADC1.Rank-38\#ChannelRegularConversion=10
+ADC1.Rank-39\#ChannelRegularConversion=11
+ADC1.Rank-40\#ChannelRegularConversion=12
+ADC1.Rank-41\#ChannelRegularConversion=13
+ADC1.Rank-42\#ChannelRegularConversion=14
+ADC1.Rank-43\#ChannelRegularConversion=15
+ADC1.Rank-44\#ChannelRegularConversion=16
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-30\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-31\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-32\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-33\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-34\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-35\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-36\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-37\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-38\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-39\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-40\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-41\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-42\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-43\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-44\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_xTaskGetCurrentTaskHandle,FootprintOK
@@ -14,15 +73,16 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP2=FREERTOS
-Mcu.IP3=IWDG
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP10=USB_DEVICE
+Mcu.IP2=DMA
+Mcu.IP3=FREERTOS
+Mcu.IP4=IWDG
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=USB
+Mcu.IPNb=11
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -49,6 +109,7 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.21.0
 MxDb.Version=DB.4.0.210
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -115,7 +176,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_CRC_Init-CRC-false-HAL,5-MX_IWDG_Init-IWDG-false-HAL,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,7-MX_SPI1_Init-SPI1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_CRC_Init-CRC-false-HAL,6-MX_IWDG_Init-IWDG-false-HAL,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,8-MX_SPI1_Init-SPI1-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
