adc with dma checkpoint

--- a/transmitter/firmware/firmware.ioc
+++ b/transmitter/firmware/firmware.ioc
@@ -1,57 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-30\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-31\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-32\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-33\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-34\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-35\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-36\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-37\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-38\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-39\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-40\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-41\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-42\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-43\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-44\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-45\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,Rank-30\#ChannelRegularConversion,Channel-30\#ChannelRegularConversion,SamplingTime-30\#ChannelRegularConversion,Rank-31\#ChannelRegularConversion,Channel-31\#ChannelRegularConversion,SamplingTime-31\#ChannelRegularConversion,Rank-32\#ChannelRegularConversion,Channel-32\#ChannelRegularConversion,SamplingTime-32\#ChannelRegularConversion,Rank-33\#ChannelRegularConversion,Channel-33\#ChannelRegularConversion,SamplingTime-33\#ChannelRegularConversion,Rank-34\#ChannelRegularConversion,Channel-34\#ChannelRegularConversion,SamplingTime-34\#ChannelRegularConversion,Rank-35\#ChannelRegularConversion,Channel-35\#ChannelRegularConversion,SamplingTime-35\#ChannelRegularConversion,Rank-36\#ChannelRegularConversion,Channel-36\#ChannelRegularConversion,SamplingTime-36\#ChannelRegularConversion,Rank-37\#ChannelRegularConversion,Channel-37\#ChannelRegularConversion,SamplingTime-37\#ChannelRegularConversion,Rank-38\#ChannelRegularConversion,Channel-38\#ChannelRegularConversion,SamplingTime-38\#ChannelRegularConversion,Rank-39\#ChannelRegularConversion,Channel-39\#ChannelRegularConversion,SamplingTime-39\#ChannelRegularConversion,Rank-40\#ChannelRegularConversion,Channel-40\#ChannelRegularConversion,SamplingTime-40\#ChannelRegularConversion,Rank-41\#ChannelRegularConversion,Channel-41\#ChannelRegularConversion,SamplingTime-41\#ChannelRegularConversion,Rank-42\#ChannelRegularConversion,Channel-42\#ChannelRegularConversion,SamplingTime-42\#ChannelRegularConversion,Rank-43\#ChannelRegularConversion,Channel-43\#ChannelRegularConversion,SamplingTime-43\#ChannelRegularConversion,Rank-44\#ChannelRegularConversion,Channel-44\#ChannelRegularConversion,SamplingTime-44\#ChannelRegularConversion
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EnableAnalogWatchDog=false
+ADC1.EnableRegularConversion=ENABLE
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,EnableAnalogWatchDog,Rank-45\#ChannelRegularConversion,Channel-45\#ChannelRegularConversion,SamplingTime-45\#ChannelRegularConversion
 ADC1.InjNumberOfConversion=0
-ADC1.NbrOfConversion=16
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Rank-30\#ChannelRegularConversion=2
-ADC1.Rank-31\#ChannelRegularConversion=3
-ADC1.Rank-32\#ChannelRegularConversion=4
-ADC1.Rank-33\#ChannelRegularConversion=5
-ADC1.Rank-34\#ChannelRegularConversion=6
-ADC1.Rank-35\#ChannelRegularConversion=7
-ADC1.Rank-36\#ChannelRegularConversion=8
-ADC1.Rank-37\#ChannelRegularConversion=9
-ADC1.Rank-38\#ChannelRegularConversion=10
-ADC1.Rank-39\#ChannelRegularConversion=11
-ADC1.Rank-40\#ChannelRegularConversion=12
-ADC1.Rank-41\#ChannelRegularConversion=13
-ADC1.Rank-42\#ChannelRegularConversion=14
-ADC1.Rank-43\#ChannelRegularConversion=15
-ADC1.Rank-44\#ChannelRegularConversion=16
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-30\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-31\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-32\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-33\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-34\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-35\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-36\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-37\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-38\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-39\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-40\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-41\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-42\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-43\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-44\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Rank-45\#ChannelRegularConversion=2
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_41CYCLES_5
+ADC1.SamplingTime-45\#ChannelRegularConversion=ADC_SAMPLETIME_41CYCLES_5
+ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
