receiver stub project

--- a/receiver/firmware/firmware.ioc
+++ b/receiver/firmware/firmware.ioc
@@ -1,33 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-45\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.ContinuousConvMode=ENABLE
-ADC1.DataAlign=ADC_DATAALIGN_RIGHT
-ADC1.DiscontinuousConvMode=DISABLE
-ADC1.EnableAnalogWatchDog=false
-ADC1.EnableRegularConversion=ENABLE
-ADC1.ExternalTrigConv=ADC_SOFTWARE_START
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,EnableAnalogWatchDog,Rank-45\#ChannelRegularConversion,Channel-45\#ChannelRegularConversion,SamplingTime-45\#ChannelRegularConversion
-ADC1.InjNumberOfConversion=0
-ADC1.NbrOfConversion=2
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Rank-45\#ChannelRegularConversion=2
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
-ADC1.SamplingTime-45\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
-ADC1.ScanConvMode=ADC_SCAN_ENABLE
-ADC1.master=1
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC1
-Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_xTaskGetCurrentTaskHandle,FootprintOK
@@ -35,47 +6,41 @@ FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=ADC1
-Mcu.IP1=CRC
-Mcu.IP10=USB_DEVICE
-Mcu.IP2=DMA
-Mcu.IP3=FREERTOS
-Mcu.IP4=IWDG
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=USB
-Mcu.IPNb=11
+Mcu.IP0=CRC
+Mcu.IP1=FREERTOS
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_ADC1_TempSens_Input
-Mcu.Pin14=VP_ADC1_Vref_Input
-Mcu.Pin15=VP_CRC_VS_CRC
-Mcu.Pin16=VP_FREERTOS_VS_ENABLE
-Mcu.Pin17=VP_IWDG_VS_IWDG
-Mcu.Pin18=VP_SYS_VS_tim1
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=VP_CRC_VS_CRC
+Mcu.Pin13=VP_FREERTOS_VS_ENABLE
+Mcu.Pin14=VP_IWDG_VS_IWDG
+Mcu.Pin15=VP_SYS_VS_tim1
+Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PA11
-Mcu.PinsNb=20
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PA11
+Mcu.Pin9=PA12
+Mcu.PinsNb=17
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.21.0
 MxDb.Version=DB.4.0.210
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -89,9 +54,6 @@ NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=ADC VOLTAGE
-PA0-WKUP.Signal=ADCx_IN0
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -162,7 +124,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_CRC_Init-CRC-false-HAL,6-MX_IWDG_Init-IWDG-false-HAL,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,8-MX_SPI1_Init-SPI1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
@@ -184,8 +146,6 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
@@ -198,10 +158,6 @@ USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
-VP_ADC1_TempSens_Input.Mode=IN-TempSens
-VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
-VP_ADC1_Vref_Input.Mode=IN-Vrefint
-VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
