--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -51,25 +51,27 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_ADC1_TempSens_Input
-Mcu.Pin14=VP_ADC1_Vref_Input
-Mcu.Pin15=VP_CRC_VS_CRC
-Mcu.Pin16=VP_FREERTOS_VS_ENABLE
-Mcu.Pin17=VP_IWDG_VS_IWDG
-Mcu.Pin18=VP_SYS_VS_tim1
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PB1
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=VP_ADC1_TempSens_Input
+Mcu.Pin16=VP_ADC1_Vref_Input
+Mcu.Pin17=VP_CRC_VS_CRC
+Mcu.Pin18=VP_FREERTOS_VS_ENABLE
+Mcu.Pin19=VP_IWDG_VS_IWDG
 Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_SYS_VS_tim1
+Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PA11
-Mcu.PinsNb=20
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=22
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.21.0
@@ -77,6 +79,7 @@ MxDb.Version=DB.4.0.210
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -100,6 +103,14 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=SI4463 CTS
+PA2.Locked=true
+PA2.Signal=GPIO_Input
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=SI4463 SHUTDOWN
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=SI4463 SCK
 PA5.Mode=Full_Duplex_Master
@@ -115,7 +126,7 @@ PA7.Signal=SPI1_MOSI
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB0.GPIO_Label=SI4463 IRQ
 PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.GPIO_PuPd=GPIO_NOPULL
 PB0.Locked=true
 PB0.Signal=GPXTI0
 PB1.GPIOParameters=GPIO_Label
@@ -156,8 +167,8 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=firmware.ioc
-ProjectManager.ProjectName=firmware
+ProjectManager.ProjectFileName=transmitter.ioc
+ProjectManager.ProjectName=transmitter
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
@@ -212,4 +223,4 @@ VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
-board=firmware
+board=transmitter
