updated cubemx; enabled watchdog

--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -30,8 +30,9 @@ Dma.Request0=ADC1
 Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_xTaskGetCurrentTaskHandle,FootprintOK
+FREERTOS.IPParameters=Tasks01,INCLUDE_xTaskGetCurrentTaskHandle,FootprintOK,configUSE_IDLE_HOOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
+FREERTOS.configUSE_IDLE_HOOK=0
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
