printf to uart1

--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -18,23 +18,26 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
-Mcu.IP7=USB
-Mcu.IP8=USB_DEVICE
-Mcu.IPNb=9
+Mcu.IP7=USART1
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=VP_CRC_VS_CRC
-Mcu.Pin15=VP_FREERTOS_VS_ENABLE
-Mcu.Pin16=VP_IWDG_VS_IWDG
-Mcu.Pin17=VP_SYS_VS_tim1
-Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_CRC_VS_CRC
+Mcu.Pin17=VP_FREERTOS_VS_ENABLE
+Mcu.Pin18=VP_IWDG_VS_IWDG
+Mcu.Pin19=VP_SYS_VS_tim1
 Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA5
@@ -42,7 +45,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=19
+Mcu.PinsNb=21
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.22.0
@@ -62,6 +65,8 @@ NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -90,6 +95,8 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=SI4463 MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB0.GPIO_Label=SI4463 IRQ
 PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -141,7 +148,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART1_UART_Init-USART1-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
@@ -171,6 +178,8 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
