enable i2c for oled in receiver

--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -13,15 +13,16 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CRC
 Mcu.IP1=FREERTOS
-Mcu.IP2=IWDG
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP10=USB_DEVICE
+Mcu.IP2=I2C1
+Mcu.IP3=IWDG
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IP9=USB
+Mcu.IPNb=11
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -32,12 +33,14 @@ Mcu.Pin12=PA11
 Mcu.Pin13=PA12
 Mcu.Pin14=PA13
 Mcu.Pin15=PA14
-Mcu.Pin16=VP_CRC_VS_CRC
-Mcu.Pin17=VP_FREERTOS_VS_ENABLE
-Mcu.Pin18=VP_IWDG_VS_IWDG
-Mcu.Pin19=VP_SYS_VS_tim1
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_CRC_VS_CRC
+Mcu.Pin19=VP_FREERTOS_VS_ENABLE
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=VP_IWDG_VS_IWDG
+Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA5
@@ -45,7 +48,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.22.0
@@ -107,6 +110,14 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=SI4463 nSEL
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=OLED_I2C_SCL
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=OLED_I2C_SDA
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=RED LED
 PC13-TAMPER-RTC.Locked=true
@@ -148,7 +159,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART1_UART_Init-USART1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART1_UART_Init-USART1-false-HAL,8-MX_I2C1_Init-I2C1-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
