--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -9,6 +9,8 @@ FREERTOS.configTIMER_TASK_STACK_DEPTH=256
 FREERTOS.configTOTAL_HEAP_SIZE=8192
 FREERTOS.configUSE_TIMERS=1
 File.Version=6
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CRC
