--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -15,16 +15,17 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CRC
 Mcu.IP1=FREERTOS
-Mcu.IP10=USB_DEVICE
+Mcu.IP10=USB
+Mcu.IP11=USB_DEVICE
 Mcu.IP2=I2C1
 Mcu.IP3=IWDG
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SPI1
 Mcu.IP7=SYS
-Mcu.IP8=USART1
-Mcu.IP9=USB
-Mcu.IPNb=11
+Mcu.IP8=TIM3
+Mcu.IP9=USART1
+Mcu.IPNb=12
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -35,14 +36,15 @@ Mcu.Pin12=PA11
 Mcu.Pin13=PA12
 Mcu.Pin14=PA13
 Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_CRC_VS_CRC
-Mcu.Pin19=VP_FREERTOS_VS_ENABLE
+Mcu.Pin16=PB4
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_CRC_VS_CRC
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_IWDG_VS_IWDG
-Mcu.Pin21=VP_SYS_VS_tim1
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=VP_FREERTOS_VS_ENABLE
+Mcu.Pin21=VP_IWDG_VS_IWDG
+Mcu.Pin22=VP_SYS_VS_tim1
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA5
@@ -50,7 +52,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.22.0
@@ -112,6 +114,9 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=SI4463 nSEL
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=BUZZER
+PB4.Signal=S_TIM3_CH1
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=OLED_I2C_SCL
 PB6.Mode=I2C
@@ -121,7 +126,7 @@ PB7.GPIO_Label=OLED_I2C_SDA
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=RED LED
+PC13-TAMPER-RTC.GPIO_Label=RED_LED
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PCC.Checker=false
@@ -161,7 +166,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART1_UART_Init-USART1-false-HAL,8-MX_I2C1_Init-I2C1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART1_UART_Init-USART1-false-HAL,8-MX_I2C1_Init-I2C1-false-HAL,9-MX_TIM3_Init-TIM3-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
@@ -185,12 +190,21 @@ RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=1.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,AutoReloadPreload,Pulse-PWM Generation1 CH1,Period,OCPolarity_1
+TIM3.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM3.Period=1024
+TIM3.Prescaler=32
+TIM3.Pulse-PWM\ Generation1\ CH1=512
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
