prepare for current

--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -7,7 +7,7 @@ ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EnableAnalogWatchDog=false
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,EnableAnalogWatchDog,Rank-45\#ChannelRegularConversion,Channel-45\#ChannelRegularConversion,SamplingTime-45\#ChannelRegularConversion
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ContinuousConvMode,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,ExternalTrigConv,EnableAnalogWatchDog,Rank-45\#ChannelRegularConversion,Channel-45\#ChannelRegularConversion,SamplingTime-45\#ChannelRegularConversion,master
 ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
@@ -52,27 +52,28 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB1
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=VP_ADC1_TempSens_Input
-Mcu.Pin16=VP_ADC1_Vref_Input
-Mcu.Pin17=VP_CRC_VS_CRC
-Mcu.Pin18=VP_FREERTOS_VS_ENABLE
-Mcu.Pin19=VP_IWDG_VS_IWDG
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_ADC1_TempSens_Input
+Mcu.Pin17=VP_ADC1_Vref_Input
+Mcu.Pin18=VP_CRC_VS_CRC
+Mcu.Pin19=VP_FREERTOS_VS_ENABLE
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_SYS_VS_tim1
-Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=VP_IWDG_VS_IWDG
+Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=22
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=23
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.22.0
@@ -96,6 +97,10 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=ADC VOLTAGE
 PA0-WKUP.Signal=ADCx_IN0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ADC_CURRENT
+PA1.Locked=true
+PA1.Signal=ADCx_IN1
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -199,6 +204,8 @@ RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
