--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -11,6 +11,8 @@ FREERTOS.configUSE_TIMERS=1
 File.Version=6
 I2C1.I2C_Mode=I2C_Fast
 I2C1.IPParameters=I2C_Mode
+IWDG.IPParameters=Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_16
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CRC
