i2c transmit with dma and interrupts - possibly fix watchdog issue

--- a/receiver/receiver.ioc
+++ b/receiver/receiver.ioc
@@ -1,4 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.I2C1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.0.Instance=DMA1_Channel6
+Dma.I2C1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.0.Mode=DMA_NORMAL
+Dma.I2C1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=I2C1_TX
+Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_xTaskGetCurrentTaskHandle,FootprintOK,configUSE_TIMERS,configTIMER_TASK_PRIORITY,configTIMER_TASK_STACK_DEPTH,configTIMER_QUEUE_LENGTH,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK
@@ -17,18 +28,19 @@ IWDG.Prescaler=IWDG_PRESCALER_8
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CRC
-Mcu.IP1=FREERTOS
-Mcu.IP10=USB
-Mcu.IP11=USB_DEVICE
-Mcu.IP2=I2C1
-Mcu.IP3=IWDG
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM3
-Mcu.IP9=USART1
-Mcu.IPNb=12
+Mcu.IP1=DMA
+Mcu.IP10=USART1
+Mcu.IP11=USB
+Mcu.IP12=USB_DEVICE
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C1
+Mcu.IP4=IWDG
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=TIM3
+Mcu.IPNb=13
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -61,9 +73,11 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
@@ -169,7 +183,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_CRC_Init-CRC-false-HAL,4-MX_IWDG_Init-IWDG-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART1_UART_Init-USART1-false-HAL,8-MX_I2C1_Init-I2C1-false-HAL,9-MX_TIM3_Init-TIM3-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_CRC_Init-CRC-false-HAL,5-MX_IWDG_Init-IWDG-false-HAL,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,7-MX_SPI1_Init-SPI1-false-HAL,8-MX_USART1_UART_Init-USART1-false-HAL,9-MX_I2C1_Init-I2C1-false-HAL,10-MX_TIM3_Init-TIM3-false-HAL
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=48000000
