--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -52,28 +52,27 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=VP_ADC1_TempSens_Input
-Mcu.Pin17=VP_ADC1_Vref_Input
-Mcu.Pin18=VP_CRC_VS_CRC
-Mcu.Pin19=VP_FREERTOS_VS_ENABLE
+Mcu.Pin10=PB1
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=VP_ADC1_TempSens_Input
+Mcu.Pin16=VP_ADC1_Vref_Input
+Mcu.Pin17=VP_CRC_VS_CRC
+Mcu.Pin18=VP_FREERTOS_VS_ENABLE
+Mcu.Pin19=VP_IWDG_VS_IWDG
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_IWDG_VS_IWDG
-Mcu.Pin21=VP_SYS_VS_tim1
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=VP_SYS_VS_tim1
+Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=23
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=22
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.22.0
@@ -109,34 +108,30 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=SI4463 CTS
-PA2.Locked=true
-PA2.Signal=GPIO_Input
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=SI4463 SHUTDOWN
+PA3.GPIO_Label=CC1101 GDO2
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=SI4463 SCK
+PA5.GPIO_Label=CC1101 SCK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=SI4463 MISO
+PA6.GPIO_Label=CC1101 MISO
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=SI4463 MOSI
+PA7.GPIO_Label=CC1101 MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB0.GPIO_Label=SI4463 IRQ
+PB0.GPIO_Label=CC1101 CSN
 PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB0.GPIO_PuPd=GPIO_NOPULL
 PB0.Locked=true
 PB0.Signal=GPXTI0
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=SI4463 nSEL
+PB1.GPIO_Label=CC1101 GDO0
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
