cc1101 driver stub; it compiles

--- a/transmitter/transmitter.ioc
+++ b/transmitter/transmitter.ioc
@@ -80,7 +80,6 @@ MxDb.Version=DB.4.0.220
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.EXTI0_IRQn=true\:5\:0\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -124,12 +123,10 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=CC1101 MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB0.GPIO_Label=CC1101 CSN
-PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PB0.GPIO_PuPd=GPIO_NOPULL
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=CC1101_CSN
 PB0.Locked=true
-PB0.Signal=GPXTI0
+PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=CC1101 GDO0
 PB1.Locked=true
@@ -201,8 +198,6 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=1.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
